# fastapi-s3-rds

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  task-def.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1f1eaf76dc4c_initial_schema.py  261965bb468b_create_files_table.py  70db4f30bfd4_create_files_table.py
app/: main.py
app/api/v1/: upload.py
app/core/: config.py
app/crud/: file.py
app/db/: models.py
app/schemas/: file.py
app/services/: s3.py
tests/: conftest.py  test_api_routes.py  test_database.py  test_upload.py
